--- a/testimonials.html
+++ b/testimonials.html
@@ -4,77 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Testimonials | Lilley Consulting & Strategy</title>
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      margin: 0;
-      background: #f8f8f8;
-      color: #222;
-      line-height: 1.6;
-    }
-
-    header {
-      background-color: #4B0082;
-      color: white;
-      padding: 1em 0.5em;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      box-shadow: 0 1px 5px rgba(0,0,0,0.1);
-    }
-
-    nav {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 1em;
-    }
-
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-size: 0.9em;
-      padding: 0.4em 1em;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      max-width: 800px;
-      margin: 2em auto;
-      padding: 1em;
-    }
-
-    .testimonial {
-      border-left: 5px solid #6a1b9a;
-      background: #fff;
-      padding: 1.5em;
-      margin-bottom: 2em;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.05);
-    }
-
-    .testimonial footer {
-      margin-top: 1.5em;
-      font-weight: bold;
-      font-style: normal;
-      color: #666;
-    }
-
-    footer {
-      background-color: #eee;
-      text-align: center;
-      padding: 1em;
-      font-size: 0.9em;
-      color: #666;
-      margin-top: 4em;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <header>
+    <h1>Clarity, Strategy & Lived Experience</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -85,25 +20,28 @@
     </nav>
   </header>
 
-  <main>
-    <h1>Testimonials</h1>
+  <main class="container">
+    <h2>Real Stories. Real Change.</h2>
     <p>These are the words of people who chose to be heard, supported, and respected. Shared with their permission, their identities are protected.</p>
 
     <div class="testimonial">
-      <p>I really don’t think I would be here if it were not for Tracy.</p>
-      <p>We knew each other at school and lost contact until sometime in the 2010s. This was when we started chatting via social media platforms, and I realised she had grown personally a lot. I was taken aback…</p>
-      <p>In 2021, I underwent several surgeries… Tracy reached out when I was at my lowest — drinking, prescription drugs, limited mobility, and a mental health spiral. She just knew.</p>
-      <p>It was Tracy who found a place for me to reside and get help. It was Tracy who told the health professionals what for, and Tracy who has kept me pushing for answers — because she heard.</p>
-      <p>Since then, she’s had my back completely. She listens, distracts with kindness (“Send me photos of your garden”), and gently helps me reset…</p>
-      <p>If Tracy hadn’t reached out, I believe I would have been dismissed until I took my own life. I wasn’t far from it.</p>
-      <p>I can’t thank her enough. I am privileged to call her a true friend, a lovely human, and an absolutely courageous wahine.</p>
+      <p><em>
+        I really don’t think I would be here if it were not for Tracy.<br><br>
+        We knew each other at school and lost contact until sometime in the 2010s. This was when we started chatting via social media platforms, and I realised she had grown personally a lot. I was taken aback...<br><br>
+        In 2021, I underwent several surgeries... Tracy reached out when I was at my lowest — drinking, prescription drugs, limited mobility, and a mental health spiral. She just knew.<br><br>
+        It was Tracy who found a place for me to reside and get help. It was Tracy who told the health professionals what for, and Tracy who has kept me pushing for answers — because she heard.<br><br>
+        Since then, she's had my back completely. She listens, distracts with kindness ("Send me photos of your garden"), and gently helps me reset...<br><br>
+        If Tracy hadn’t reached out, I believe I would have been dismissed until I took my own life. I wasn’t far from it.<br><br>
+        I can’t thank her enough. I am privileged to call her a true friend, a lovely human, and an absolutely courageous wahine.
+      </em></p>
       <footer>— Shared with permission, identity withheld for privacy</footer>
     </div>
   </main>
 
   <footer>
-    &copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED
+    <p>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</p>
   </footer>
 
 </body>
 </html>
+
