--- a/testimonials.html
+++ b/testimonials.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Testimonials | Lilley Consulting & Strategy</title>
+  <title>Testimonials | LILLEY CONSULTING & STRATEGY LIMITED</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <header>
     <h1>Clarity, Strategy & Lived Experience</h1>
     <nav>
@@ -30,7 +29,7 @@
         We knew each other at school and lost contact until sometime in the 2010s. This was when we started chatting via social media platforms, and I realised she had grown personally a lot. I was taken aback...<br><br>
         In 2021, I underwent several surgeries... Tracy reached out when I was at my lowest — drinking, prescription drugs, limited mobility, and a mental health spiral. She just knew.<br><br>
         It was Tracy who found a place for me to reside and get help. It was Tracy who told the health professionals what for, and Tracy who has kept me pushing for answers — because she heard.<br><br>
-        Since then, she's had my back completely. She listens, distracts with kindness ("Send me photos of your garden"), and gently helps me reset...<br><br>
+        Since then, she’s had my back completely. She listens, distracts with kindness (“Send me photos of your garden”), and gently helps me reset...<br><br>
         If Tracy hadn’t reached out, I believe I would have been dismissed until I took my own life. I wasn’t far from it.<br><br>
         I can’t thank her enough. I am privileged to call her a true friend, a lovely human, and an absolutely courageous wahine.
       </em></p>
@@ -41,7 +40,5 @@
   <footer>
     <p>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</p>
   </footer>
-
 </body>
 </html>
-
