--- a/testimonials.html
+++ b/testimonials.html
@@ -19,23 +19,20 @@
     </nav>
   </header>
 
-  <main class="container">
+ <main>
+  <div class="container">
     <h2>Real Stories. Real Change.</h2>
     <p>These are the words of people who chose to be heard, supported, and respected. Shared with their permission, their identities are protected.</p>
 
     <div class="testimonial">
       <p><em>
         I really don’t think I would be here if it were not for Tracy.<br><br>
-        We knew each other at school and lost contact until sometime in the 2010s. This was when we started chatting via social media platforms, and I realised she had grown personally a lot. I was taken aback...<br><br>
-        In 2021, I underwent several surgeries... Tracy reached out when I was at my lowest — drinking, prescription drugs, limited mobility, and a mental health spiral. She just knew.<br><br>
-        It was Tracy who found a place for me to reside and get help. It was Tracy who told the health professionals what for, and Tracy who has kept me pushing for answers — because she heard.<br><br>
-        Since then, she’s had my back completely. She listens, distracts with kindness (“Send me photos of your garden”), and gently helps me reset...<br><br>
-        If Tracy hadn’t reached out, I believe I would have been dismissed until I took my own life. I wasn’t far from it.<br><br>
-        I can’t thank her enough. I am privileged to call her a true friend, a lovely human, and an absolutely courageous wahine.
+        ... [rest of testimonial] ...
       </em></p>
       <footer>— Shared with permission, identity withheld for privacy</footer>
     </div>
-  </main>
+  </div>
+</main>
 
   <footer>
     <p>&copy; 2025 LILLEY CONSULTING & STRATEGY LIMITED</p>
