--- a/testimonials.html
+++ b/testimonials.html
@@ -27,7 +27,13 @@
     <div class="testimonial">
       <p><em>
         I really don’t think I would be here if it were not for Tracy.<br><br>
-        ... [rest of testimonial] ...
+        WE knew each other at school and lost contact until sometime in the 2010s. This was when we started chatting via social media platforms, 
+        and i realised she had grown personally a lot. I was taken aback..<br><br>
+        It was Tracy who found a place for me to reside and get help. It was Tracy who told the health professionals what for, and Tracy who has kept me 
+        pushing for answers - because she heard.<br><br>
+        Since then, she's had my back completely. She listens, distracts with kindness ("send me photos oof your garden"), and gently helps me reset..<br><br>
+        If Tracy hadn't reached out, I believe I would have been dismissed until I took my own life. I wasn't far from it.<br><br>
+        I cant thank her enough. I am privileged to call her a true friend, a lovely human, and an absolutely courageous wahine.
       </em></p>
       <footer>— Shared with permission, identity withheld for privacy</footer>
     </div>
